docs/0.13/_sources/api/gammapy.cube.MapDataset.rst.txt
MapDataset
==========

.. currentmodule:: gammapy.cube

.. autoclass:: MapDataset
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~MapDataset.data_shape
      ~MapDataset.mask
      ~MapDataset.model
      ~MapDataset.parameters

   .. rubric:: Methods Summary

   .. autosummary::

      ~MapDataset.copy
      ~MapDataset.fake
      ~MapDataset.from_hdulist
      ~MapDataset.likelihood
      ~MapDataset.likelihood_per_bin
      ~MapDataset.npred
      ~MapDataset.plot_residuals
      ~MapDataset.read
      ~MapDataset.residuals
      ~MapDataset.to_hdulist
      ~MapDataset.write

   .. rubric:: Attributes Documentation

   .. autoattribute:: data_shape
   .. autoattribute:: mask
   .. autoattribute:: model
   .. autoattribute:: parameters

   .. rubric:: Methods Documentation

   .. automethod:: copy
   .. automethod:: fake
   .. automethod:: from_hdulist
   .. automethod:: likelihood
   .. automethod:: likelihood_per_bin
   .. automethod:: npred
   .. automethod:: plot_residuals
   .. automethod:: read
   .. automethod:: residuals
   .. automethod:: to_hdulist
   .. automethod:: write
